<resources>
    <string name="app_name">CSDEVproject</string>
    <string name="action_settings">Settings</string>

    <string name="fab_hint">FAB hint</string>

    <!--FAB titles-->
    <string name="note">Note</string>
    <string name="photo">Photo</string>
    <string name="activity">Activity</string>
    <string name="conversation">Conversation</string>
    <!--FAB titles-->

    <!--BottomNavigationView actions titles-->
    <string name="cropstream">Cropstream</string>
    <string name="chat">Chat</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <!--BottomNavigationView actions titles-->

    <!--list_item_crop_stream.xml strings-->
    <string name="hint_name_name">N</string>
    <string name="hint_crop">C</string>
    <string name="medium_circle">⚫</string>
    <string name="hint_time_hint">5:15</string>
    <string name="label_replied_to_a_chat_with">replied to a chat with</string>
    <string name="hint_reply_target">you</string>
    <string name="hint_text_message">Text message</string>
    <string name="content_description_profile_picture">Profile picture</string>
    <string name="content_description_message_picture">Message picture</string>
    <string name="content_description_reply_button">Reply button</string>
    <string name="label_start_a_private_chat">Start a private chat</string>
    <!--list_item_crop_stream.xml strings-->

    <!--Toolbar layout strings-->
    <string name="hint_toolbar_title">Toolbar Title</string>
    <!--Toolbar layout strings-->

    <!--Toolbar titles strings-->
    <string name="title_cropstream">Cropstream</string>
    <string name="title_chat">Chat</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="hint_chat_date">10/20/18</string>
    <string name="hint_chat_name">Name Name</string>
    <string name="label_chat_more_than"><![CDATA[>]]></string>
    <string name="content_description_search_for">Search for</string>
    <string name="content_description_cancel_search">Cancel search</string>
    <string name="content_description_settings">Settings</string>
    <string name="hint_search">Search</string>
    <!--Toolbar titles strings-->

    <string name="hint_profile_name">Profile Name</string>
    <string name="content_description_toolbar_chat_profile_picture">Profile picture</string>
    <string name="dot">⦁</string>
    <string name="started_chat_with">started a chat with</string>
    <string name="replied_to_chat_with">replied to a chat with</string>
    <string name="simple_dot">.</string>
    <string name="work_in_progress">Work in progress</string>

    <string name="work_in_progress_on_cropstream">Work in progress</string>
    <string name="work_in_progress_on_chat">Work in progress on Chat</string>
    <string name="work_in_progress_on_favorites">Work in progress on Favorites</string>
    <string name="work_in_progress_on_search">Work in progress on Search</string>
    <string name="view_message">View message</string>

    <!--Auth stuff-->
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="sign_out">Sign Out</string>

    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="signed_in">Signed In</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="privacy_policy">By tapping to continue, you are indicating that you have read
        <a href="https://www.cropstream.com/legal/privacy-policy">Privacy policy</a> and agree to the
        <a href="https://www.cropstream.com/legal/terms-of-service">Terms of service</a></string>
    <string name="use_phone_number">Use phone number</string>
    <string name="code_ua">+380</string>
    <string name="phone_number">Phone number</string>
    <string name="verify_phone_number">Verify phone number</string>
    <string name="use_token">Use token</string>
    <string name="country_code_default">+1</string>
    <string name="enter_your_verification_code_here">Enter your verification code here</string>
    <string name="verify">Verify</string>
    <string name="et_1">1</string>
    <string name="et_2">2</string>
    <string name="et_3">3</string>
    <string name="et_4">1</string>
    <string name="et_5">2</string>
    <string name="et_6">3</string>
    <string name="_5552221237">5552221237</string>
    <string name="chat_profile_image">Chat profile image</string>
    <string name="yesterday">Yesterday</string>
    <string name="hint_time">17.26</string>
    <string name="hint_test">test</string>
    <string name="enter_message">Enter message</string>
    <string name="pick_picture_to_send">Pick picture to send</string>
    <string name="send_message">send_message</string>
    <string name="send_a_message_to">send a message to</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="new_message">New Message</string>
    <string name="hint_profile">Profile</string>
    <string name="content_description_expand_right">Expand right</string>
    <string name="hint_organization">Organization</string>
    <string name="log_out">Log out</string>
    <string name="content_description_catalog_entry_image">Catalog Entry Image</string>

    <string-array name="country_array">
        <item>+380</item>
    </string-array>

    <!--Auth stuff-->

    <string name="footer_description">*%s*</string>

    <!--Notification stuff-->
    <string name="channel_id">notification_chanel_id</string>
    <string name="channel_name">notification_chanel_name</string>
    <string name="channel_description">notification_chanel_description</string>
    <string name="notification_default_message">Default notification message</string>
    <!--Notification stuff-->

    <string name="button_feed_event_new_message">New message</string>
    <string name="line_of_color_on_left">Line of color on left</string>
    <string name="star_on_the_right">Star on the right</string>
    <string name="hint_list_item_possible_manufacturer">Manufacturer</string>
    <string name="hint_list_item_possible_name">Name</string>
    <string name="view_private_chat">View private chat</string>
    <string name="start_private_chat">Start a private chat</string>
    <string name="btn_connect">Connect</string>

</resources>
