<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_cropstream"
        android:enabled="true"
        android:icon="@drawable/ic_crop_stream"
        android:title="@string/cropstream"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat_bubble_outline"
        android:title="@string/chat"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|withText" />

</menu>