<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    android:layout_margin="8dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/list_item_possible_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/list_item_possible_iv_line_left"
            android:layout_width="12dp"
            android:layout_height="0dp"
            android:background="@color/green"
            android:contentDescription="@string/line_of_color_on_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_item_possible_tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_list_item_possible_name"
            android:singleLine="false"
            app:layout_constraintEnd_toStartOf="@+id/list_item_possible_iv_star_right"
            app:layout_constraintStart_toEndOf="@+id/list_item_possible_iv_line_left"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_item_possible_tv_manufacturer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_list_item_possible_manufacturer"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/list_item_possible_tv_name"
            app:layout_constraintStart_toStartOf="@+id/list_item_possible_tv_name"
            app:layout_constraintTop_toBottomOf="@+id/list_item_possible_tv_name" />

        <ImageView
            android:id="@+id/list_item_possible_iv_star_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_favorites_clicked"
            android:contentDescription="@string/star_on_the_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>