<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/layout_toolbar">

        <ImageButton
            android:onClick="toggleSearchButtonChatToolbar"
            android:id="@+id/content_toolbar_ib_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_search_green"
            android:contentDescription="@string/content_description_search_for"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/content_toolbar_et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_search"
            android:inputType="text"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/content_toolbar_ib_cancel_search"
            app:layout_constraintStart_toEndOf="@+id/content_toolbar_ib_search"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/content_toolbar_ib_cancel_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_cancel_green"
            android:contentDescription="@string/content_description_cancel_search"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/content_toolbar_ib_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_dummy_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/content_toolbar_tv_profile_name"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description_toolbar_chat_profile_picture" />

        <TextView
            style="@style/TextViewGeneral"
            android:id="@+id/content_toolbar_tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_profile_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/content_toolbar_ib_settings"
            app:layout_constraintStart_toEndOf="@+id/content_toolbar_ib_search"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextViewGeneral"
            android:id="@+id/content_toolbar_tv_label_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_expand_more_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/content_toolbar_tv_profile_name"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/content_toolbar_ib_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_settings_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description_settings" />

    </android.support.constraint.ConstraintLayout>
</layout>