<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/list_item_iv_chat_profile_picture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/content_description_profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_dummy_default" />

    <TextView
        android:id="@+id/list_item_tv_chat_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/hint_chat_name"
        app:layout_constraintBottom_toTopOf="@+id/list_item_tv_chat_message_sneak_pick"
        app:layout_constraintEnd_toStartOf="@+id/list_item_tv_chat_date"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_four"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_item_tv_chat_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_chat_date"
        app:layout_constraintEnd_toStartOf="@+id/list_item_tv_chat_label_more_than"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_item_tv_chat_label_more_than"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/label_chat_more_than"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_item_tv_chat_message_sneak_pick"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/list_item_iv_chat_profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_four"
        app:layout_constraintTop_toBottomOf="@+id/list_item_tv_chat_name" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vertical_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15
" />

</android.support.constraint.ConstraintLayout>